Made Three HTML files and the CSS file

--- a/about.html
+++ b/about.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <HEAD>
-<TITLE>Photography Site</TITLE>
+<TITLE>About the Experts</TITLE>
 <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
 </HEAD>
 
 <body>
  
-<h1>Website Title</h1>
+<h1>Title of the site</h1>
 
 <nav>
 <ul>
@@ -21,17 +21,11 @@
 </ul>
 </nav>
 
+<h2>About the Experts</h2>
+
 <p class="center">Check out the best movies of 2017!!!!!!!!!!!! </p><br>
 
-<div>
-	<!-- Put images here-->
-</div>
-<div>
-	
-</div>
-<div>
-	
-</div>
+<!-- Make a grid for the two boxes introducing us -->
 
 <footer>
   <p>Created By: Joseph Gillespie and Jason Cannon</p>
