Added other files and set up about page and menu bar

--- a/about.html
+++ b/about.html
@@ -12,11 +12,11 @@
 
 <nav>
 <ul>
-  <li class = "active"><a href="index.html">Home</a></li>
-  <li><a href="portfolio.html">About</a></li>
-  <li><a href="reviews.html">Star Wars</a></li>
-  <li><a href="about.html">Movie2</a></li>
-  <li><a href="">Movie3</a></li>
+  <li><a href="index.html">Home</a></li>
+  <li class="active"><a href="about.html">About</a></li>
+  <li><a href="movie1.html">Star Wars</a></li>
+  <li><a href="movie2.html">Movie2</a></li>
+  <li><a href="movie3.html">Movie3</a></li>
   <li><a href="contact.html">Contact</a></li>
 </ul>
 </nav>
@@ -26,6 +26,21 @@
 <p class="center">Check out the best movies of 2017!!!!!!!!!!!! </p><br>
 
 <!-- Make a grid for the two boxes introducing us -->
+<div class ="container">
+
+  <div class="columns">
+    <img src="https://cdn.pixabay.com/photo/2017/07/02/09/51/star-wars-2463926_960_720.png" alt="Jason Cannon">
+    <p>This is Jason Cannon and all of his attributes</p>
+  </div>
+
+  <div class="columns">
+    <img src="https://cdn.pixabay.com/photo/2017/03/25/07/03/star-wars-2172953_960_720.jpg" alt="Joseph Gillespie">
+    <p>This is Joseph Gillespie and all of his attributes</p>
+  </div>
+  
+
+</div>
+
 
 <footer>
   <p>Created By: Joseph Gillespie and Jason Cannon</p>
