--- a/movie3.html
+++ b/movie3.html
@@ -1,3 +1,6 @@
+
+
+
 <!DOCTYPE html>
 <html>
 <HEAD>
@@ -16,8 +19,8 @@
   <li><a href="about.html">About</a></li>
   <li><a href="movie1.html">Star Wars</a></li>
   <li><a href="movie2.html">Movie2</a></li>
-  <li><a href="movie3.html">Movie3</a></li>
-  <li class="active"><a href="contact.html">Contact</a></li>
+  <li class="active"><a href="movie3.html">Movie3</a></li>
+  <li><a href="contact.html">Contact</a></li>
 </ul>
 </nav>
 
