--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <nav>
 <ul>
   <li class = "active"><a href="index.html">Home</a></li>
-  <li><a href="portfolio.html">About</a></li>
-  <li><a href="reviews.html">Star Wars</a></li>
-  <li><a href="about.html">Movie2</a></li>
-  <li><a href="">Movie3</a></li>
+  <li><a href="about.html">About</a></li>
+  <li><a href="movie1.html">Star Wars</a></li>
+  <li><a href="movie2.html">Movie2</a></li>
+  <li><a href="movie3.html">Movie3</a></li>
   <li><a href="contact.html">Contact</a></li>
 </ul>
 </nav>
