--- a/movie2.html
+++ b/movie2.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html>
 <HEAD>
@@ -15,9 +17,9 @@
   <li><a href="index.html">Home</a></li>
   <li><a href="about.html">About</a></li>
   <li><a href="movie1.html">Star Wars</a></li>
-  <li><a href="movie2.html">Movie2</a></li>
+  <li class="active"><a href="movie2.html">Movie2</a></li>
   <li><a href="movie3.html">Movie3</a></li>
-  <li class="active"><a href="contact.html">Contact</a></li>
+  <li><a href="contact.html">Contact</a></li>
 </ul>
 </nav>
 
