--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 </HEAD>
 
 <body>
- 
+
 <h1>Title of the site</h1>
 
 <nav>
@@ -29,7 +29,7 @@
 <div class ="container">
 
   <div class="columns">
-    <img src="https://cdn.pixabay.com/photo/2017/07/02/09/51/star-wars-2463926_960_720.png" alt="Jason Cannon">
+    <img src="https://scontent-lax3-1.xx.fbcdn.net/v/t1.0-1/p160x160/22309015_129429991138682_7927101085454115927_n.jpg?oh=aaecbd059a03c1a7d2afa50b0c840d77&oe=5AE7690B" alt="Jason Cannon">
     <p>This is Jason Cannon and all of his attributes</p>
   </div>
 
@@ -37,7 +37,7 @@
     <img src="https://cdn.pixabay.com/photo/2017/03/25/07/03/star-wars-2172953_960_720.jpg" alt="Joseph Gillespie">
     <p>This is Joseph Gillespie and all of his attributes</p>
   </div>
-  
+
 
 </div>
 
