--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </HEAD>
 
 <body>
- 
+
 <h1>Website Title</h1>
 
 <nav>
@@ -21,16 +21,17 @@
 </ul>
 </nav>
 
-<p class="center">Check out the best movies of 2017!!!!!!!!!!!! </p><br>
+<p class="center">We are dedicated to leaving quality expert reviews of the latest
+  and greatest movies as well as providing you the opportunity to review them too!</p><br>
 
 <div>
 	<!-- Put images here-->
 </div>
 <div>
-	
+
 </div>
 <div>
-	
+
 </div>
 
 <footer>
