--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
   </div>
 
   <div class="columns">
-    <img src="/profilePic" alt="Joseph Gillespie">
+    <img src="/profilePic.jpg" alt="Joseph Gillespie">
     <p>This is Joseph Gillespie and all of his attributes</p>
   </div>
 
