--- a/movie1.html
+++ b/movie1.html
@@ -26,19 +26,25 @@
 <div class="wrapper">
   <div class="reviews">
     <h2>Reviews</h2>
-    <p>Awesome movie.  It totally blew my mind.  So crazy.  I can't believe that everybody died at the end.</p><br>
-    -Joseph Gillespie, expert<br><br><br><br>
+    <p>Awesome movie.  It totally blew my mind.  So crazy.  I can't believe that everybody died at the end.</p>
+    <p class="signature">-Joseph Gillespie, expert<p><hr>
 
     <p>Somewhat of a disappointment.  It definitely didn't live up to all the hype.  There were definitely some
-      great scenes, but also some pointless ones.  At least that's what my friends told me.</p><br>
-    -Jason Cannon, expert
+      great scenes, but also some pointless ones.  At least that's what my friends told me.</p>
+    <p class="signature">-Jason Cannon, expert<p><hr>
+
+    <p>Somewhat of a disappointment.  It definitely didn't live up to all the hype.  There were definitely some
+      great scenes, but also some pointless ones.  At least that's what my friends told me.</p>
+    <p class="signature">-Jason Cannon, expert<p>
+
+
   </div>
 
   <div class="movieGrid">
 
 
-    <div class="picture" id="redstarwars">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/22/Star_Wars_Episode_VIII_The_Last_Jedi_Word_Logo.svg/800px-Star_Wars_Episode_VIII_The_Last_Jedi_Word_Logo.svg.png">
+    <div class="picture">
+        <img src="http://image.al.com/home/bama-media/width960/img/entertainment_impact/photo/star-wars-the-last-jedijpg-5947cff70de1f24c.jpg">
     </div>
 
     <div class="picture">
@@ -63,9 +69,16 @@
 
   </div>
   <div class="quotes">
-    <p>Please submit to Canvas the URL for your web server, where your code is running
-    (e.g. on your DigitalOcean server). On this website, in a footer, you must list
-    the URL for your GitHub repository, which must be stored in GitHub Classroom.</p>
+
+    <br><br>
+    <p>"I've seen this raw strength only once before in Ben Solo. It didn't scare me enough then. It does now."</p>
+    <p class="signature">-Luke Skywalker</p>
+    <br><br>
+    <p>"The Empire, your parents, the Resistance, the Sith, the Jedi... let the past die. Kill it, if you have to. That's the only way to become what you are meant to be."</p>
+    <p class="signature">-Kylo Ren</p>
+    <br><br>
+    <p>"When I found you, I saw what old masters live to see... Raw, untamed power and beyond that, something truly special. The potential of your bloodline."</p>
+    <p class="signature">-Supreme Leader Snoke</p>
   </div>
 
 </div>
