--- a/about.html
+++ b/about.html
@@ -4,38 +4,46 @@
 <TITLE>About the Experts</TITLE>
 <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
 </HEAD>
 
 <body>
 
-<h1>Title of the site</h1>
+<img class="onion" src="Zwiebel-lineart-300px.png">
+<h1>Moldy Onions</h1>
 
 <nav>
 <ul>
   <li><a href="index.html">Home</a></li>
   <li class="active"><a href="about.html">About</a></li>
   <li><a href="movie1.html">Star Wars</a></li>
-  <li><a href="movie2.html">Movie2</a></li>
-  <li><a href="movie3.html">Movie3</a></li>
+  <li><a href="movie2.html">Bee Movie</a></li>
+  <li><a href="movie3.html">Ratatouille</a></li>
   <li><a href="contact.html">Contact</a></li>
 </ul>
 </nav>
 
-<h2>About the Experts</h2>
+<h2 id="reviewTitle">About the Experts</h2>
 
-<p class="center">Check out the best movies of 2017!!!!!!!!!!!! </p><br>
-
-<!-- Make a grid for the two boxes introducing us -->
 <div class ="container">
 
   <div class="columns">
     <img src="https://scontent-lax3-1.xx.fbcdn.net/v/t1.0-1/p160x160/22309015_129429991138682_7927101085454115927_n.jpg?oh=aaecbd059a03c1a7d2afa50b0c840d77&oe=5AE7690B" alt="Jason Cannon">
-    <p>This is Jason Cannon and all of his attributes</p>
+    <p>Jason has been gaining movie-watching experience ever since he was a young child.  His parents fondly remember his keen ability to quote movies
+    as a young child in applicable situations.  They still smile when thinking of their son opening a statement with "As Old Reliable used to say..." (From the movie "Lady and the Tramp").
+    <br><br>Jason has been committed to his love for movies ever since those childhood days, trying to make time on Friday nights to watch a film with the family.  Over the years, Jason became
+    much more picky with the movies he watched.  His motto became "If I don't love it, I leave."
+    <br><br>Now Jason's parents are smiling even more as they watch their son turning his talent and experience into a respectable profession.  </p>
   </div>
 
   <div class="columns">
     <img src="/profilePic.jpg" alt="Joseph Gillespie">
-    <p>This is Joseph Gillespie and all of his attributes</p>
+    <p>Joseph Gillespie is a career movie-reviewer and co-founder of Moldy Onions.  He has a bachelor's degree in movie enjoyment from Yale and a PhD in movie criticism from Harvard University.
+    Joseph's life has been filled with experience in rating movies, even from birth.  It is said that when he was only a month old his family was watching "Pride and Prejudice" when he suddenly
+    shouted out "this movie sucks!!".  He also enjoys movies, most of them actually.  Some of his favorites are films based on history and virtually any Disney film.  In recent years he
+    single-handedly destroyed the movie "Avatar: the Last Airbender" with his criticism, saying that it was "a disgrace to my favorite animated TV show."
+    <br><br>Now as a member of Moldy Onions, Joseph provides some of the most important film reviews in the world, saving humanity from low quality films and guiding them to the promised land of
+        great movies.</p>
   </div>
 
 
