--- a/index.html
+++ b/index.html
@@ -4,34 +4,33 @@
 <TITLE>Photography Site</TITLE>
 <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
 </HEAD>
 
 <body>
 
-<h1>Website Title</h1>
+<img class="onion" src="Zwiebel-lineart-300px.png">
+<h1>Moldy Onions</h1>
 
 <nav>
 <ul>
   <li class = "active"><a href="index.html">Home</a></li>
   <li><a href="about.html">About</a></li>
   <li><a href="movie1.html">Star Wars</a></li>
-  <li><a href="movie2.html">Movie2</a></li>
-  <li><a href="movie3.html">Movie3</a></li>
+  <li><a href="movie2.html">Bee Movie</a></li>
+  <li><a href="movie3.html">Ratatouille</a></li>
   <li><a href="contact.html">Contact</a></li>
 </ul>
 </nav>
 
+<div class="hero">
 <p class="center">We are dedicated to leaving quality expert reviews of the latest
-  and greatest movies as well as providing you the opportunity to review them too!</p><br>
+  and greatest movies as well as providing you the opportunity to review them too!<br>
+Click on the following photos to see our reviews:</p>
 
-<div>
-	<!-- Put images here-->
-</div>
-<div>
-
-</div>
-<div>
-
+  <a href="movie1.html"><img id="starwars" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/22/Star_Wars_Episode_VIII_The_Last_Jedi_Word_Logo.svg/2000px-Star_Wars_Episode_VIII_The_Last_Jedi_Word_Logo.svg.png"></a>
+  <a href="movie3.html"><img id="rat" src="https://c1.staticflickr.com/2/1184/781642430_979cf62ccb.jpg"></a>
+  <a href="movie2.html"><img id="bee" src="http://cdn.playbuzz.com/cdn/fa468afa-cb34-4116-8ce0-d7e9c2f72ca0/47f41072-13ff-4b7d-8bf5-953a9c2e22a3.jpg"></a>
 </div>
 
 <footer>
