--- a/movie1.html
+++ b/movie1.html
@@ -6,19 +6,21 @@
 <TITLE>Photography Site</TITLE>
 <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
 </HEAD>
 
 <body>
 
-<h1>Website Title</h1>
+<img class="onion" src="Zwiebel-lineart-300px.png">
+<h1>Moldy Onions</h1>
 
 <nav>
 <ul>
   <li><a href="index.html">Home</a></li>
   <li><a href="about.html">About</a></li>
   <li class="active"><a href="movie1.html">Star Wars</a></li>
-  <li><a href="movie2.html">Movie2</a></li>
-  <li><a href="movie3.html">Movie3</a></li>
+  <li><a href="movie2.html">Bee Movie</a></li>
+  <li><a href="movie3.html">Ratatouille</a></li>
   <li><a href="contact.html">Contact</a></li>
 </ul>
 </nav>
@@ -33,9 +35,9 @@
       great scenes, but also some pointless ones.  At least that's what my friends told me.</p>
     <p class="signature">-Jason Cannon, expert<p><hr>
 
-    <p>Somewhat of a disappointment.  It definitely didn't live up to all the hype.  There were definitely some
-      great scenes, but also some pointless ones.  At least that's what my friends told me.</p>
-    <p class="signature">-Jason Cannon, expert<p>
+    <p>Man, Kylo Ren was so hot in that scene where he is wearing those super tall pants!!!! I wish I could get some cool
+    pants like that.</p>
+    <p class="signature">-SuperStarwarsFan 287<p>
 
 
   </div>
@@ -44,7 +46,7 @@
 
 
     <div class="picture">
-        <img src="http://image.al.com/home/bama-media/width960/img/entertainment_impact/photo/star-wars-the-last-jedijpg-5947cff70de1f24c.jpg">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/60/Star_Wars_Episode_VIII_The_Last_Jedi_Word_Logo_-_White_teaser_poster_variant.svg/800px-Star_Wars_Episode_VIII_The_Last_Jedi_Word_Logo_-_White_teaser_poster_variant.svg.png">
     </div>
 
     <div class="picture">
@@ -70,7 +72,8 @@
   </div>
   <div class="quotes">
 
-    <br><br>
+    <h2>Quotes</h2>
+
     <p>"I've seen this raw strength only once before in Ben Solo. It didn't scare me enough then. It does now."</p>
     <p class="signature">-Luke Skywalker</p>
     <br><br>
