--- a/movie2.html
+++ b/movie2.html
@@ -6,32 +6,82 @@
 <TITLE>Photography Site</TITLE>
 <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
 </HEAD>
 
 <body>
 
-<h1>Website Title</h1>
+<img class="onion" src="Zwiebel-lineart-300px.png">
+<h1>Moldy Onions</h1>
 
 <nav>
 <ul>
   <li><a href="index.html">Home</a></li>
   <li><a href="about.html">About</a></li>
   <li><a href="movie1.html">Star Wars</a></li>
-  <li class="active"><a href="movie2.html">Movie2</a></li>
-  <li><a href="movie3.html">Movie3</a></li>
+  <li class="active"><a href="movie2.html">Bee Movie</a></li>
+  <li><a href="movie3.html">Ratatouille</a></li>
   <li><a href="contact.html">Contact</a></li>
 </ul>
 </nav>
 
-<p class="center">Check out the best movies of 2017!!!!!!!!!!!! </p><br>
+<div class="wrapper">
+  <div class="reviews">
+    <h2>Reviews</h2>
+    <p>The bee movie is unbeelievably good.  Such beeutiful animation and music.  Would very much recommend.</p>
+    <p class="signature">-Joseph Gillespie, expert<p><hr>
 
-<div>
-	<!-- Put images here-->
-</div>
-<div>
+    <p>A very clever movie with some great one-liners. Caused a lot of mixed emotions though. About halfway through
+    the movie I felt enough guilt to give up honey, but by the end I had committed to doubling my honey intake in order
+    to save the flowers.</p>
+    <p class="signature">-Jason Cannon, expert<p><hr>
 
-</div>
-<div>
+    <p>Bzzzzz bzzz bzzzzzz bzz bzzzz bzzzzzzz bzz bzzzz bzzz bzzzzzz bzzz.  Bzzz bzzzzz bzzz bzzzzzz bzzz.</p>
+    <p class="signature">-HiveWorker 33<p>
+
+
+  </div>
+
+  <div class="movieGrid">
+
+
+    <div class="picture">
+        <img src="https://c2.staticflickr.com/4/3086/2341020773_5a04ff30e0_b.jpg">
+    </div>
+
+    <div class="picture">
+        <img src="https://c1.staticflickr.com/3/2281/1788880389_d9c3aaf04f.jpg">
+    </div>
+
+    <div class="picture">
+        <img src="https://c1.staticflickr.com/3/2361/2112977205_7713f6ccc2.jpg">
+    </div>
+
+    <div class="picture">
+        <img src="http://maxpixel.freegreatpicture.com/static/photo/1x/Fly-Nectar-Harbinger-Of-Spring-Bee-Foraging-1248757.jpg">
+    </div>
+
+    <div class="picture">
+        <img src="https://c1.staticflickr.com/4/3656/3341335784_7284635087_b.jpg">
+    </div>
+
+    <div class="picture">
+        <img src="https://cdn.pixabay.com/photo/2017/01/11/00/04/honey-1970570__180.jpg">
+    </div>
+
+  </div>
+  <div class="quotes">
+
+    <h2>Quotes</h2>
+    <p>"We're very proud of you son and a perfect report card; all B's!"</p>
+    <p class="signature">-Martin Benson</p>
+    <br><br>
+    <p>"They make the honey, we make the money!"</p>
+    <p class="signature">-Beekeepers</p>
+    <br><br>
+    <p>"No, I'm not going to his funeral. Everyone knows you sting someone, you die. You don't waste it on a squirrel. He was such a hothead."</p>
+    <p class="signature">-Barry B. Benson</p>
+  </div>
 
 </div>
 
