--- a/movie3.html
+++ b/movie3.html
@@ -7,32 +7,82 @@
 <TITLE>Photography Site</TITLE>
 <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
 </HEAD>
 
 <body>
 
-<h1>Website Title</h1>
+<img class="onion" src="Zwiebel-lineart-300px.png">
+<h1>Moldy Onions</h1>
 
 <nav>
 <ul>
   <li><a href="index.html">Home</a></li>
   <li><a href="about.html">About</a></li>
   <li><a href="movie1.html">Star Wars</a></li>
-  <li><a href="movie2.html">Movie2</a></li>
-  <li class="active"><a href="movie3.html">Movie3</a></li>
+  <li><a href="movie2.html">Bee Movie</a></li>
+  <li class="active"><a href="movie3.html">Ratatouille</a></li>
   <li><a href="contact.html">Contact</a></li>
 </ul>
 </nav>
 
-<p class="center">Check out the best movies of 2017!!!!!!!!!!!! </p><br>
+<div class="wrapper">
+  <div class="reviews">
+    <h2>Reviews</h2>
+    <p>This is a really great movie, just like Remy's cooking.  It's a funny, great story where they make lots of delicious food.
+    Now I'm hungry...</p>
+    <p class="signature">-Joseph Gillespie, expert<p><hr>
 
-<div>
-	<!-- Put images here-->
-</div>
-<div>
+    <p>Ratatouille became an all-time classic the first time I saw it. I have now seen it over ten times and my appreciation
+    for it continues to grow, just like my appetite does during the movie.</p>
+    <p class="signature">-Jason Cannon, expert<p><hr>
 
-</div>
-<div>
+    <p>Ratatouille est un super film. J'aime aussi beaucoup la recette. Je le mange tous les jeudis sauf le quatrieme jeudi du mois.</p>
+    <p class="signature">-Pierre<p>
+
+
+  </div>
+
+  <div class="movieGrid">
+
+
+    <div class="picture">
+        <img src="https://c1.staticflickr.com/5/4131/4989622320_7b97cce21b_b.jpg">
+    </div>
+
+    <div class="picture">
+        <img src="https://c1.staticflickr.com/2/1060/780765111_1193b56b15.jpg">
+    </div>
+
+    <div class="picture">
+        <img src="https://c1.staticflickr.com/2/1184/781642430_979cf62ccb.jpg">
+    </div>
+
+    <div class="picture">
+        <img src="https://c1.staticflickr.com/2/1264/781641294_4586ed9892.jpg">
+    </div>
+
+    <div class="picture">
+        <img src="https://c1.staticflickr.com/8/7698/28350808915_9101e6c916_b.jpg">
+    </div>
+
+    <div class="picture">
+        <img src="https://c1.staticflickr.com/4/3265/2736870502_18cdf026c8_b.jpg">
+    </div>
+
+  </div>
+  <div class="quotes">
+
+    <h2>Quotes</h2>
+    <p>"I don't like food, I love it. If I don't love it, I don't SWALLOW."</p>
+    <p class="signature">-Anton Ego</p>
+    <br><br>
+    <p>"Anyone can cook, but only the fearless can be great."</p>
+    <p class="signature">-Gusteau</p>
+    <br><br>
+    <p>"I think it's apparent that I need to rethink my life a little bit. What's my problem? First of all, I'm a rat. Which means, life is hard. Second, I have a highly developed sense of taste and smell."</p>
+    <p class="signature">-Remy</p>
+  </div>
 
 </div>
 
