--- a/contact.html
+++ b/contact.html
@@ -4,24 +4,27 @@
 <TITLE>Photography Site</TITLE>
 <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
 </HEAD>
 
 <body>
 
-<h1>Website Title</h1>
+<img class="onion" src="Zwiebel-lineart-300px.png">
+<h1>Moldy Onions</h1>
 
 <nav>
 <ul>
   <li><a href="index.html">Home</a></li>
   <li><a href="about.html">About</a></li>
   <li><a href="movie1.html">Star Wars</a></li>
-  <li><a href="movie2.html">Movie2</a></li>
-  <li><a href="movie3.html">Movie3</a></li>
+  <li><a href="movie2.html">Bee Movie</a></li>
+  <li><a href="movie3.html">Ratatouille</a></li>
   <li class="active"><a href="contact.html">Contact</a></li>
 </ul>
 </nav>
 
-<h2>Leave a Review</h2>
+
+<h2 id="reviewTitle">Leave a Review</h2>
 
 <form action="/my-handling-form-page" method="post">
     <div>
@@ -33,8 +36,8 @@
         <select name="movies">
 	  <option value="" disabled selected>Select a movie</option>
 	  <option value="starwars">Star Wars</option>
-	  <option value="starwars">Star Wars</option>
-	  <option value="starwars">Star Wars</option>
+	  <option value="starwars">Bee Movie</option>
+	  <option value="starwars">Ratatouille</option>
 	</select>
     </div>
     <div id="review">
