Actual finished product

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 
 <h2 id="reviewTitle">Leave a Review</h2>
 
-<form action="/my-handling-form-page" method="post">
+<form action="https://formspree.io/byujmc@gmail.com" method="POST">
     <div>
         <label for="name">Name:</label><br>
         <input type="text" id="name" name="user_name">
@@ -47,6 +47,10 @@
     <div>
 	<label for="suggest">Suggest a new movie:</label><br>
 	<input type="text" id="suggest" name="new_suggestion">
+    </div>
+
+    <div>
+      <button type="submit">Submit</button>
     </div>
 
 </form>
