--- a/movie2.html
+++ b/movie2.html
@@ -54,11 +54,11 @@
     </div>
 
     <div class="picture">
-        <img src="https://c1.staticflickr.com/3/2361/2112977205_7713f6ccc2.jpg">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/b/b5/Honey_bee_%28Apis_mellifera%29.jpg">
     </div>
 
     <div class="picture">
-        <img src="http://maxpixel.freegreatpicture.com/static/photo/1x/Fly-Nectar-Harbinger-Of-Spring-Bee-Foraging-1248757.jpg">
+        <img src="https://cdn.pixabay.com/photo/2017/01/11/00/04/honey-1970570__180.jpg">
     </div>
 
     <div class="picture">
@@ -66,7 +66,8 @@
     </div>
 
     <div class="picture">
-        <img src="https://cdn.pixabay.com/photo/2017/01/11/00/04/honey-1970570__180.jpg">
+        <img src="https://c1.staticflickr.com/3/2361/2112977205_7713f6ccc2.jpg">
+
     </div>
 
   </div>
