--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <HEAD>
-<TITLE>Photography Site</TITLE>
+<TITLE>Contact</TITLE>
 <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
