--- a/movie2.html
+++ b/movie2.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
 <HEAD>
-<TITLE>Photography Site</TITLE>
+<TITLE>Bee Movie</TITLE>
 <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
